server/k8s/pear-connect-store-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pear-connect-store-dashboard
  name: pear-connect-store-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pear-connect-store-dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/pear-connect-network: "true"
        io.kompose.service: pear-connect-store-dashboard
    spec:
      containers:
        - env:
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
            - name: ME_CONFIG_MONGODB_SERVER
            - name: ME_CONFIG_OPTIONS_EDITORTHEME
          image: mongo-express
          name: pear-connect-store-dashboard
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
