server/k8s/pear-connect-rpc-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pear-connect-rpc-proxy
  name: pear-connect-rpc-proxy
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: pear-connect-rpc-proxy
status:
  loadBalancer: {}
