server/k8s/pear-connect-store-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pear-connect-store-dashboard
  name: pear-connect-store-dashboard
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: pear-connect-store-dashboard
status:
  loadBalancer: {}
