server/k8s/pear-connect-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pear-connect-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pear-connect-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pear-connect-network: "true"
